--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <div class="links">
                 <a href="#">
                     <img class="img2" src="./img/ajedrez.png" alt="">
+                    <h3><span>Ajedrez</span></h3>
                 </a>
                 <a href="#">
                     <img class="img2" src="./img/calcu.jpg" alt="">
