--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>&nbsp</h1>
             <p>"I am an enthusiastic back-end developer with solid expertise in Java and a deep-seated passion for problem-solving through programming. My fascination with technology began at an early age and has evolved into my creative driving force over the years. My focus is on pushing boundaries, discovering innovative solutions, and constantly learning to thrive in my field. I am committed to staying current with industry trends and leveraging my skills to contribute meaningfully to projects. I welcome challenges as opportunities for growth and am dedicated to maintaining a high standard of excellence in my work."</p>
             <h1>&nbsp</h1>
-            <a id="Skills" class="cv" href="https://drive.google.com/file/d/1gaSg4TnGHwtee-ZFqoDQsEIBI64PECoB/view?usp=drive_link"> Download my CV</a>
+            <a id="Skills" class="cv" href="CV_CosminAndrei.pdf"> Download my CV</a>
         </div>
         <div class="Skills">
             <h1>Skills</h1>
